adding all files

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="project">
                 <div class="img-project">
                     <p>click to find out more ⬇</p>
-                    <a href="http://127.0.0.1:5500/commodity%20program/index.html"><img src="imgs-projects/PMS.png" alt=""></a>
+                    <a href="https://hamza-elouadi.github.io/PMS/"><img src="imgs-projects/PMS.png" alt=""></a>
                 </div>
                 <div class="information">
                     <div class="title-p">
@@ -89,6 +89,26 @@
                     </div>
                     <div class="imgs-button">
                         <button><a href="https://github.com/Hamza-Elouadi/BMS.git">GitHub</a></button>
+                        <div class="imgs">
+                            <img src="imgs-languages/html.png" alt="">
+                            <img src="imgs-languages/css.png" alt="">
+                            <img src="imgs-languages/js.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="img-project">
+                    <p>click to find out more ⬇</p>
+                    <a href="https://hamza-elouadi.github.io/espace-fitness/"><img src="imgs-projects/Screenshot 2024-08-27 211914.png" alt=""></a>
+                </div>
+                <div class="information">
+                    <div class="title-p">
+                        <h5>espace fitness</h5>
+                        <p>Website for a small gym for the residents of the surrounding neighborhoods.</p>
+                    </div>
+                    <div class="imgs-button">
+                        <button><a href="https://github.com/Hamza-Elouadi/espace-fitness">GitHub</a></button>
                         <div class="imgs">
                             <img src="imgs-languages/html.png" alt="">
                             <img src="imgs-languages/css.png" alt="">
