--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
                         <div class="git-github"></div>
                     </div>
                 </div>
+                <div class="skill">
+                    <img src="imgs-languages/icons8-tailwind-css-48.png" alt="">
+                    <h6>50%</h6>
+                    <div class="progress-bar">
+                        <div class="tailwind"></div>
+                    </div>
+                </div>
             </div>
         </div>
         <h5 id="about">ABOUT ME</h5>
@@ -112,7 +119,6 @@
                         <div class="imgs">
                             <img src="imgs-languages/html.png" alt="">
                             <img src="imgs-languages/css.png" alt="">
-                            <img src="imgs-languages/js.png" alt="">
                         </div>
                     </div>
                 </div>
