adding a responsive to all screens

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <p>Hello, I am Hamza El Ouadi, a passionate and creative frontend developer based in Casablanca, Morocco. I have a growing expertise in web development and a deep love for design. I am dedicated to creating user-friendly and visually appealing web experiences. Throughout my career, I have had the privilege of working on a variety of exciting projects, from building responsive e-commerce websites to developing interactive web applications. These experiences have allowed me to hone my skills and stay updated with the latest frontend technologies and trends. When I am not busy coding, you can find me immersed in my university studies at the Faculty of Sciences in Ain Chock, Casablanca, where I specialize in Mathematical Physics and envision becoming a mechanical and energy engineer and programmer. I am always excited to take on new challenges and bring innovative ideas to life. Feel free to explore my portfolio to see examples of my work. If you have any questions or would like to collaborate, don't hesitate to get in touch.
             </p>
         </div>
-        <h4>PROJECTS</h4>
-        <div class="all-project" id="all-project">
+        <h4 id="all-project">PROJECTS</h4>
+        <div class="all-project">
             <div class="project">
                 <div class="img-project">
                     <p>click to find out more ⬇</p>
